--- a/style.css
+++ b/style.css
@@ -89,9 +89,8 @@ nav{
     text-align: center;
     margin:0 auto;
 }
-
 .subsection{
-    scroll-margin-top: 70px;
+    scroll-margin-top: 50px;
     height: 100vh;
     color: #fff;
     text-align: center;
@@ -103,7 +102,18 @@ nav{
 }
 .subsection p{
     max-width: 40%;
-    font-size: 30px;
+    font-size: 33px;
     color: #fff;
     margin:0 auto;
+}
+.subsection img{
+    width: 425px;
+    height: 275px;
+    border-radius: 30px;
+}
+.subsection ul li{
+    list-style: none;
+    display: inline-grid;
+    padding: 8px 6%;
+    position: relative;
 }
